fix(memory_calibration): WIP
